--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@ eventbrite: 15596587814
 -->
 {% if page.etherpad %}
 <p>
-  <strong>TitanPad:</strong> <a href="{{page.etherpad}}">{{page.etherpad}}</a>.
+  <strong>Etherpad:</strong> <a href="{{page.etherpad}}">{{page.etherpad}}</a>.
   <br/>
-  We will use this TitanPad for chatting, taking notes, and sharing URLs and bits of code.
+  We will use this Etherpad for chatting, taking notes, and sharing URLs and bits of code.
 </p>
 {% endif %}
 
